- 7.0.0 snapshot - small changes in tensor